--- a/asset/style.css
+++ b/asset/style.css
@@ -51,11 +51,11 @@
     border-radius: 50%;
     
 }
-@media (max-width:768px) {
+/* @media (max-width:768px) {
     .left-header-section img{
         
         
         
     }
     
-}
+} */
